--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <h1>UpperCase</h1>
     <div ng-controller="ToUpperController">
-        <input type="text" ng-model = "upperData"
-        ng-blur='upper();'>
+        <input type="text" ng-model = "search">
+        <div ng-repeat="item in quantity | filter : search">{{item.name}}:{{item.quantity}}</div>
     </div>
 </body>
 </html>
