--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -23,6 +23,7 @@
             <div ng-repeat='item in bc.list' class='items'>
                 Bought {{item.qty}} {{item.name}}
             </div>
+            <div ng-if='bc.list.length==0'>{{bc.error}}</div>
         </div>
     </div>  
 </body>
