--- a/Assignment3/data.html
+++ b/Assignment3/data.html
@@ -1,6 +1,6 @@
 <ol>
-    <div ng-repeat='item in ctrl.list' class='list'>
-        <li class='container'>
+    <div ng-repeat='item in ctrl.list' class='list jumbotron'>
+        <li >
             <b>Name: ({{item.short_name}})</b><i>{{item.name}}</i>
             <b>Description: </b><i>{{item.description}}</i>
         </li>
