--- a/Assignment3/index.html
+++ b/Assignment3/index.html
@@ -14,8 +14,7 @@
         }
         .list{
             padding: 10px 10px 10px 40px;
-            border:1px solid #4b4949;
-            grid-template-columns: 50%;
+            grid-template-columns: 3;
         }
         .list button{
             width: auto;
